--- a/DevOps.VersionControl.Functions.CreateGitHubRepository/DevOps.VersionControl.Functions.CreateGitHubRepository.csproj
+++ b/DevOps.VersionControl.Functions.CreateGitHubRepository/DevOps.VersionControl.Functions.CreateGitHubRepository.csproj
@@ -1,7 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>cdorst</Authors>
+    <Description>Helper for creating a new repository with the GitHub API</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>CDorst.DevOps.VersionControl.Functions.CreateGitHubRepository</PackageId>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CDorst.Common.Functions.PostJsonWithBasicAuthentication" Version="2.0.0" />
+    <PackageReference Include="CDorst.Metaproject.Users.CDorst.GitHubAccessToken" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
